Use Java HttpClient rather than URL connection
Signed-off-by: Thibault Meyer <meyer.thibault@gmail.com>